--- a/进程间通信方式.md
+++ b/进程间通信方式.md
@@ -1,18 +1,18 @@
-# **进程间的五种通信方式介绍**
+# 进程间的五种通信方式介绍
 
 进程间通信（IPC，InterProcess Communication）是指在不同进程之间传播或交换信息。IPC的方式通常有管道（包括无名管道和命名管道）、消息队列、信号量、共享内存、Socket（套接字）等。其中 Socket和支持不同主机上的两个进程IPC。
 
-## **一、管道**
+## 一、管道
 
 管道，通常指无名管道，是 UNIX 系统IPC最古老的形式。
 
-### **1、特点：**
+### 1、特点：
 
 1. 它是半双工的（即数据只能在一个方向上流动），具有固定的读端和写端。
 2. 它只能用于具有亲缘关系的进程之间的通信（也是父子进程或者兄弟进程之间）。
 3. 它可以看成是一种特殊的文件，对于它的读写也可以使用普通的read、write 等函数。但是它不是普通的文件，并不属于其他任何文件系统，并且只存在于内存中。
 
-### **2、原型：**
+### 2、原型：
 
 ```C++
 #include <stdio.h>
@@ -25,7 +25,7 @@ int pipe(int fd[2]);  // 返回值：若成功返回0，失败返回-1；
 
 要关闭管道只需将这两个文件描述符关闭即可。
 
-### **3、For Example**
+### 3、For Example
 
 单个进程中的管道几乎没有任何用处。所以，通常调用 pipe 的进程接着调用 fork，这样就创建了父进程与子进程之间的 IPC 通道。如下图所示：
 
@@ -59,16 +59,16 @@ int main(){
 }
 ```
 
-## **二、FIFO**
+## 二、FIFO
 
 FIFO，也称为命名管道，是一种文件类型。
 
-### **1、特点**
+### 1、特点
 
 1. FIFO可以在无关的进程之间交换数据，与无名管道不同。
 2. FIFO有路径名与之相关联，它以一种特殊设备文件形式存在于文件系统中。
 
-### **2、原型**
+### 2、原型
 
 ```C++
 #include <stdio.h>// 返回值：成功返回0， 出错返回-1
@@ -173,17 +173,17 @@ Send message: Process 7872's time is Mon Jan 16 18:00:32 2023
 
 上面的例子可以扩展成 客户端进程—服务端进程通信的实例，write_fifo的作用类似于客户端，可以打开多个客户端向一个服务器发送请求信息，read_fifo类似于服务器，它适时监控着FIFO的读端，当有数据时，读出并进行处理，但是有一个关键的问题是，每一个客户端必须预先知道服务器提供的FIFO接口，下图显示了这样的操作：
 
-## **三、消息队列**
+## 三、消息队列
 
 消息队列，是消息的链接表，存放在内核中。一个消息队列由一个标识符（即队列ID）来标识。
 
-### **1、特点**
+### 1、特点
 
 1. 消息队列是面向记录的，其中的消息具有特定的格式以及特定的优先级。
 2. 消息队列独立于发送与接收进程。进程终止时，消息队列及其内容并不会被删除。
 3. 消息队列可以实现消息的随机查询,消息不一定要以先进先出的次序读取,也可以按消息的类型读取。
 
-### **2、原型**
+### 2、原型
 
 ```C++
 #include <stdio.h>// 创建或打开消息队列：成功返回队列ID，失败返回-1
@@ -206,7 +206,7 @@ int msgctl(int msqid, int cmd, struct msqid_ds * buf);
 
 可以看出，type值非 0 时用于以非先进先出次序读消息。也可以把 type 看做优先级的权值。（其他的参数解释，请自行Google之）
 
-### **3、For Example**
+### 3、For Example
 
 下面写了一个简单的使用消息队列进行IPC的例子，服务端程序一直在等待特定类型的消息，当收到该类型的消息以后，发送另一种特定类型的消息作为反馈，客户端读取该反馈并打印出来。msg_server.c
 
@@ -300,18 +300,18 @@ int main(){
 }
 ```
 
-## **四、信号量**
+## 四、信号量
 
 信号量（semaphore）与已经介绍过的 IPC 结构不同，它是一个计数器。信号量用于实现进程间的互斥与同步，而不是用于存储进程间通信数据。
 
-### **1、特点**
+### 1、特点
 
 1. 信号量用于进程间同步，若要在进程间传递数据需要结合共享内存。
 2. 信号量基于操作系统的 PV 操作，程序对信号量的操作都是原子操作。
 3. 每次对信号量的 PV 操作不仅限于对信号量值加 1 或减 1，而且可以加减任意正整数。
 4. 支持信号量组。
 
-### **2、原型**
+### 2、原型
 
 最简单的信号量是只能取 0 和 1 的变量，这也是信号量最常见的一种形式，叫做二值信号量（Binary Semaphore）。而可以取多个正整数的信号量被称为通用信号量。Linux 下的信号量函数都是在通用的信号量数组上进行操作，而不是在一个单一的二值信号量上进行操作。
 
@@ -448,17 +448,17 @@ int main(){
 
 上面的例子如果不加信号量，则父进程会先执行完毕。这里加了信号量让父进程等待子进程执行完以后再执行。
 
-## **五、共享内存**
+## 五、共享内存
 
 共享内存（Shared Memory），指两个或多个进程共享一个给定的存储区。
 
-### **1、特点**
+### 1、特点
 
 1. 共享内存是最快的一种 IPC，因为进程是直接对内存进行存取。
 2. 因为多个进程可以同时操作，所以需要进行同步。
 3. 信号量+共享内存通常结合在一起使用，信号量用来同步对共享内存的访问。
 
-### **2、原型**
+### 2、原型
 
 ```C++
 #include <stdio.h>// 创建或获取一个共享内存：成功返回共享内存ID，失败返回-1
@@ -729,7 +729,7 @@ int main(){
 while((c=getchar())!='\n' && c!=EOF);
 ```
 
-## **五种通讯方式总结**
+## 五种通讯方式总结
 
 1. 管道：速度慢，容量有限，只有父子进程能通讯
 2. FIFO：任何进程间都能通讯，但速度慢
